完善AI对话功能